--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <script type="text/javascript" src="stage/dist/stage.web.js"></script>
 <script type="text/javascript" src="scripts.js"></script>
 <script type="text/javascript" src="textures.js"></script>
-<div id = 'score'>HELLO</div>
+<div id = 'bomb'>BOMB</div>
+<div id = 'score'>Score</div>
 </body>
 </html>
 
