added pop sound

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-
+<audio id="soundEfx" src="pop.wav" style="display: none;"></audio>
 
 <script type="text/javascript" src="stage/dist/stage.web.js"></script>
 <script type="text/javascript" src="scripts.js"></script>
