added pop sound

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 
 
 <audio id="soundEfx" src="pop.wav" style="display: none;"></audio>
+<audio id="soundEfx1" src="bomb.wav" style="display: none;"></audio>
+<audio id="soundEfx2" src="chime.wav" style="display: none;"></audio>
 
 <script type="text/javascript" src="stage/dist/stage.web.js"></script>
 <script type="text/javascript" src="scripts.js"></script>
 <script type="text/javascript" src="textures.js"></script>
-<div id = 'bomb'>BOMB</div>
+
 <div id = 'score'>Score</div>
 </body>
 </html>
