--- a/assets/index.html
+++ b/assets/index.html
@@ -7,24 +7,18 @@
 </head>
 <body>
 
+<audio id="soundEfx" src="./assets/pop.wav" style="display: none;"></audio>
+<audio id="soundEfx1" src="./assets/bomb.wav" style="display: none;"></audio>
+<audio id="soundEfx2" src="./assets/chime.wav" style="display: none;"></audio>
 
-<<<<<<< HEAD
-
-=======
-<audio id="soundEfx" src="pop.wav" style="display: none;"></audio>
-<audio id="soundEfx1" src="bomb.wav" style="display: none;"></audio>
-<audio id="soundEfx2" src="chime.wav" style="display: none;"></audio>
->>>>>>> gh-pages
 
 <script type="text/javascript" src="stage/dist/stage.web.js"></script>
-<script type="text/javascript" src="scripts.js"></script>
-<script type="text/javascript" src="textures.js"></script>
-<<<<<<< HEAD
-<div id = 'score'>HELLO</div>
-=======
+<script type="text/javascript" src="./assets/scripts.js"></script>
+<script type="text/javascript" src="./assets/textures.js"></script>
+
 
 <div id = 'score'>Score</div>
->>>>>>> gh-pages
+
 </body>
 </html>
 
