--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<!-- saved from url=(0060)file:///Users/ianstalter/Documents/dev/jsproject1/index.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Test Stage.js</title>
- <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, height=device-height">
+<html>
+<head>
+<title>Tile Swapper</title>
+ <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, height=device-height" />
 
 </head>
-<body><canvas width="1012" height="293" style="position: absolute; width: 1012px; height: 293px;"></canvas>
+<body>
+
+<audio id="soundEfx" src="./assets/pop.wav" style="display: none;"></audio>
+<audio id="soundEfx1" src="./assets/bomb.wav" style="display: none;"></audio>
+<audio id="soundEfx2" src="./assets/chime.wav" style="display: none;"></audio>
 
 
+<script type="text/javascript" src="stage/dist/stage.web.js"></script>
+<script type="text/javascript" src="./assets/scripts.js"></script>
+<script type="text/javascript" src="./assets/textures.js"></script>
 
 
-<script type="text/javascript" src="./Test Stage.js_files/stage.web.js"></script>
-<script type="text/javascript" src="./Test Stage.js_files/scripts.js"></script>
-<script type="text/javascript" src="./Test Stage.js_files/textures.js"></script>
+<div id = 'score'>Score</div>
 
+</body>
+</html>
 
-
-</body></html>
